--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     
     <p style="color: red; background: yellow;">Look out!
         This text is alarmingly presented!</p>
+        <br>
+
+        <p>New Line Here</p>
         
 
 
